<resources>
    <string name="app_name">Unit Converter</string>
    <string name="calculate">Calculate</string>
    <string name="conversion_amount">Conversion Amount: %s</string>
    <string name="miles_to_kilometers">Miles to Kilometer</string>
    <string name="degrees_to_radians">Degree to Radians</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="unit_value_to_convert">Unit Value to Convert</string>
    <string name="invert_conversion">Invert conversion?</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="radians_to_degrees">Radians to Degrees</string>
    <string name="kilometers_to_miles">Kilometer to Miles</string>
</resources>